fix(web): replace scrollbar by new scroller in group profile
Related to #489

--- a/actor-sdk/sdk-web/src/styles/activity.scss
+++ b/actor-sdk/sdk-web/src/styles/activity.scss
@@ -23,6 +23,10 @@
       font-size: 20px;
     }
   }
+
+  .scroller__wrapper {
+    height: 100%;
+  }
 }
 
 .fold {
